[package]
name = "kube-mdns"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.63.2", features = ["runtime","derive"] }
k8s-openapi = { version = "0.13.1", default-features = false, features = ["v1_21"] }
anyhow = "1.0.44"
tokio = { version = "1.12.0", features = ["full"] }
futures = "0.3.17"
libmdns = "0.6"
simple-mdns = "0.2"